--- a/src/mycss.css
+++ b/src/mycss.css
@@ -12,7 +12,7 @@ body {
     font-family: -apple-system, 'Helvetica Neue', 'Lucida Grande';
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 
-    background-image: url('') !important;
+    /* background-image: url('') !important; */
     background-color: #f5f5f7 !important;
     background-repeat: no-repeat !important;
 
