--- a/src/mycss.css
+++ b/src/mycss.css
@@ -12,11 +12,9 @@ body {
     font-family: -apple-system, 'Helvetica Neue', 'Lucida Grande';
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 
-    /* background-image: url('') !important; */
-    background-color: #f5f5f7 !important;
-    background-repeat: no-repeat !important;
-
-    background-size: 100vw 130vh !important;
+    background-color: #a0e4d3 !important;
+    overflow-x: hidden !important;
+    position: relative !important;
 }
 
 .red {
@@ -64,4 +62,83 @@ body {
     color: green !important;
     height: 2px !important;
     width: 2px !important;
+}
+
+.shape-blob {
+    background: #5386e4;
+    /*
+    height: 200px;
+    width: 200px;*/
+    height: 50vh;
+    width: 50vw;
+    border-radius: 30% 50% 20% 40%;
+    animation: transform 20s ease-in-out infinite both alternate,
+        movement_one 40s ease-in-out infinite both;
+    opacity: 0.9;
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    z-index: -10;
+}
+.shape-blob.one {
+    /* height: 500px; */
+    z-index: -10;
+    /*  width: 500px; */
+    width: 55vw;
+    height: 55vh;
+    left: -20%;
+    top: -10%;
+    transform: rotate(-180deg);
+    animation: transform 30s ease-in-out infinite both alternate,
+        movement_two 60s ease-in-out infinite both;
+}
+
+.shape-blob.two {
+    height: 0vh;
+    width: 0vw;
+    z-index: -10;
+    left: 20%;
+    top: 80%;
+    transform: rotate(-180deg);
+    animation: transform 30s ease-in-out infinite both alternate,
+        movement_two 60s ease-in-out infinite both;
+}
+
+@keyframes transform {
+    0%,
+    100% {
+        border-radius: 33% 67% 70% 30% / 30% 30% 70% 70%;
+    }
+    20% {
+        border-radius: 37% 63% 51% 49% / 37% 65% 35% 63%;
+    }
+    40% {
+        border-radius: 36% 64% 64% 36% / 64% 48% 52% 36%;
+    }
+    60% {
+        border-radius: 37% 63% 51% 49% / 30% 30% 70% 70%;
+    }
+    80% {
+        border-radius: 40% 60% 42% 58% / 41% 51% 49% 59%;
+    }
+}
+
+@keyframes movement_one {
+    0%,
+    100% {
+        transform: none;
+    }
+    50% {
+        transform: translate(50%, 20%) rotateY(10deg) scale(1.2);
+    }
+}
+
+@keyframes movement_two {
+    0%,
+    500% {
+        transform: none;
+    }
+    50% {
+        transform: translate(50%, 20%) rotate(-200deg) scale(1.2);
+    }
 }
