--- a/src/mycss.css
+++ b/src/mycss.css
@@ -12,7 +12,7 @@ body {
     font-family: -apple-system, 'Helvetica Neue', 'Lucida Grande';
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 
-    background-color: #a0e4d3 !important;
+    background-color: #f5f5f5 !important;
     overflow-x: hidden !important;
     position: relative !important;
 }
@@ -69,8 +69,8 @@ body {
     /*
     height: 200px;
     width: 200px;*/
-    height: 50vh;
-    width: 50vw;
+    height: 0vh;
+    width: 0vw;
     border-radius: 30% 50% 20% 40%;
     animation: transform 20s ease-in-out infinite both alternate,
         movement_one 40s ease-in-out infinite both;
@@ -84,8 +84,8 @@ body {
     /* height: 500px; */
     z-index: -10;
     /*  width: 500px; */
-    width: 55vw;
-    height: 55vh;
+    width: 100vw;
+    height: 70vh;
     left: -20%;
     top: -10%;
     transform: rotate(-180deg);
@@ -141,4 +141,88 @@ body {
     50% {
         transform: translate(50%, 20%) rotate(-200deg) scale(1.2);
     }
+}
+
+.lds-spinner {
+    color: official;
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+.lds-spinner div {
+    transform-origin: 40px 40px;
+    animation: lds-spinner 1.2s linear infinite;
+}
+.lds-spinner div:after {
+    content: ' ';
+    display: block;
+    position: absolute;
+    top: 3px;
+    left: 37px;
+    width: 6px;
+    height: 18px;
+    border-radius: 20%;
+    background: black;
+}
+.lds-spinner div:nth-child(1) {
+    transform: rotate(0deg);
+    animation-delay: -1.1s;
+}
+.lds-spinner div:nth-child(2) {
+    transform: rotate(30deg);
+    animation-delay: -1s;
+}
+.lds-spinner div:nth-child(3) {
+    transform: rotate(60deg);
+    animation-delay: -0.9s;
+}
+.lds-spinner div:nth-child(4) {
+    transform: rotate(90deg);
+    animation-delay: -0.8s;
+}
+.lds-spinner div:nth-child(5) {
+    transform: rotate(120deg);
+    animation-delay: -0.7s;
+}
+.lds-spinner div:nth-child(6) {
+    transform: rotate(150deg);
+    animation-delay: -0.6s;
+}
+.lds-spinner div:nth-child(7) {
+    transform: rotate(180deg);
+    animation-delay: -0.5s;
+}
+.lds-spinner div:nth-child(8) {
+    transform: rotate(210deg);
+    animation-delay: -0.4s;
+}
+.lds-spinner div:nth-child(9) {
+    transform: rotate(240deg);
+    animation-delay: -0.3s;
+}
+.lds-spinner div:nth-child(10) {
+    transform: rotate(270deg);
+    animation-delay: -0.2s;
+}
+.lds-spinner div:nth-child(11) {
+    transform: rotate(300deg);
+    animation-delay: -0.1s;
+}
+.lds-spinner div:nth-child(12) {
+    transform: rotate(330deg);
+    animation-delay: 0s;
+}
+@keyframes lds-spinner {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.hs {
+    height: 12px !important;
+    width: 12px !important;
 }
